tests/e2e-chainsaw/v1beta2/pod-management-policy/redis-cluster/cluster.yaml
---
apiVersion: redis.redis.opstreelabs.in/v1beta2
kind: RedisCluster
metadata:
  name: redis-cluster-v1beta2
spec:
  clusterSize: 3
  clusterVersion: v7
  persistenceEnabled: true
  podManagementPolicy: Parallel
  podSecurityContext:
    runAsUser: 1000
    fsGroup: 1000
  redisLeader:
    replicas: 3
  redisFollower:
    replicas: 0
  kubernetesConfig:
    image: quay.io/opstree/redis:latest
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        cpu: 101m
        memory: 128Mi
      limits:
        memory: 128Mi
  storage:
    volumeClaimTemplate:
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 1Gi
    nodeConfVolume: true
    nodeConfVolumeClaimTemplate:
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 1Gi
