tests/e2e-chainsaw/v1beta2/pod-management-policy/redis-cluster/ready-sts-parallel.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster-v1beta2-leader
spec:
  podManagementPolicy: Parallel
status:
  replicas: 3
  readyReplicas: 3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster-v1beta2-follower
spec:
  podManagementPolicy: Parallel
